# new-alert

./: .gitignore  Cargo.toml  README.md
.claude/agents/: ra-coder.md  ra-tester.md
.github/workflows/: ci.yml
docs/: DESIGN.md  QUIRKS.md  SERVER-DESIGN.md
docs/research/: game-market-ai-art-2026.md
ra-client/: Cargo.toml
ra-client/src/: appcore.rs  assets.rs  compositor.rs  font.rs  input.rs  lib.rs  menu.rs  png.rs  replay.rs  shell.rs  terrain.rs  unit_render.rs
ra-client/src/platform/: mod.rs
ra-client/tests/: aircraft_render_png.rs  aircraft_sidebar_audit.rs  campaign_activation_scg03ea.rs  campaign_activation_scg04ea.rs  campaign_placement_fidelity_suite.rs  campaign_scg01ea.rs  campaign_scg01ea_difficulty_playout.rs  naval_ai_vs_ai.rs  naval_campaign_probe.rs  naval_realmap_suite.rs  naval_realmap_survey.rs  net_lan_realmap.rs  net_lockstep_realmap.rs  replay_adversarial_audit.rs  replay_record_verify.rs  superweapon_fire_ui.rs  superweapon_fire_ui_png.rs  superweapon_render_png.rs  ui_ai_vs_ai.rs  ui_campaign_difficulty.rs  ui_campaign_flow.rs  ui_campaign_menu_suite.rs  ui_cancel_hold_suite.rs  ui_cosmetic_determinism.rs  ui_determinism.rs  ui_dome_radar_suite.rs  ui_economy_determinism.rs  ui_force_fire_gap.rs  ui_gameover.rs  ui_golden_frames.rs  ui_infantry_suite.rs  ui_lan_lobby.rs  ui_landtype_realmap_suite.rs  ui_map_sweep.rs  ui_menu_golden_frames.rs  ui_menu_monkey.rs  ui_menu_pixel_flow.rs  ui_menu_real_assets.rs  ui_menu_state_machine.rs  ui_mode_button_art_suite.rs  (+13 more)
ra-client/tests/support/: mod.rs
ra-data/: Cargo.toml
ra-data/src/: buildings.rs  campaign.rs  combat.rs  house.rs  landtype.rs  lib.rs  passability.rs  rules.rs  scenario.rs  templates.rs
ra-data/tests/: golden_assets.rs  property_no_panic.rs
ra-formats/: Cargo.toml
ra-formats/src/: aud.rs  codec.rs  cps.rs  crc.rs  ini.rs  lib.rs  mix.rs  names.rs  pack.rs  pal.rs  shp.rs  tmpl.rs
ra-formats/src/crypto/: bignum.rs  blowfish.rs  mod.rs  pk.rs  tables.rs
ra-formats/tests/: aud_real.rs  golden_assets.rs  property_no_panic.proptest-regressions  property_no_panic.rs
ra-net/: Cargo.toml
ra-net/src/: lan.rs  lib.rs  lobby.rs  local.rs  pair.rs  platform.rs  relay.rs  replay.rs  scheduler.rs  transport.rs  wire.rs
ra-net/tests/: lan_lockstep.rs  lan_resync.rs  lan_resync_replay_crosscycle.rs  lan_torture.rs  lobby_edge_cases.rs  lockstep.rs  replay_fuzz.rs  replay_rarp_fuzz_audit.rs  resync_adversarial.rs  resync_revert_drills.rs  resync_wire_fuzz.rs  wire.rs  wire_fuzz_deep.rs
ra-server/: Cargo.toml
ra-server/src/: lib.rs  main.rs  relay.rs  replay.rs  session.rs
ra-server/tests/: relay_suite.rs
ra-sim/: Cargo.toml
ra-sim/src/: ai.rs  arena.rs  building.rs  bullet.rs  campaign.rs  catalog.rs  combat.rs  coords.rs  fixed.rs  hash.rs  house.rs  lib.rs  occupancy.rs  ore.rs  path.rs  rng.rs  shroud.rs  snapshot.rs  superweapon.rs  unit.rs  world.rs
ra-sim/tests/: ai_brain_suite.rs  ai_ratio_suite.rs  ai_retune_depth_suite.rs  ai_suite.rs  aircraft_ai_suite.rs  aircraft_depth_suite.rs  aircraft_suite.rs  astar_properties.proptest-regressions  astar_properties.rs  build_time_fidelity.rs  building_combat_economy_edges.rs  bullet_properties.rs  campaign_activation_suite.rs  campaign_autocreate_depth_suite.rs  campaign_difficulty_depth_suite.rs  campaign_production_rebuild_depth_suite.rs  campaign_trigger_suite.rs  combat_reflex_suite.rs  damage_matrix.rs  defense_suite.rs  determinism.rs  factory_abandon_suite.rs  firing_fsm.rs  handicap_suite.rs  infantry_combat_suite.rs  landtype_suite.rs  m720_antigridlock_suite.rs  m722_blocker_matrix.rs  m722_blocker_matrix_stuck_audit.rs  mission_guard_depth_suite.rs  mission_transport_edges_suite.rs  mission_transport_suite.rs  naval_depth_suite.rs  naval_suite.rs  occupancy_suite.rs  ore_growth_suite.rs  production_cancel_hold_suite.rs  repair_suite.rs  retaliation_suite.rs  scatter_boundary_suite.rs  (+11 more)
